fix(web-components): added overflow:visible once expanded content has completed animation
Added overflow:visible once the expanded content has expanded so any components which use popover
will fully display instead of being cut off by overflow:hidden

--- a/packages/web-components/src/components/ic-accordion/ic-accordion.css
+++ b/packages/web-components/src/components/ic-accordion/ic-accordion.css
@@ -94,15 +94,21 @@ button:disabled {
 }
 
 .expanded-content {
-  height: 0;
+  height: var(--ic-accordion-content-height, 0);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .expanded-content-inner {
   padding: var(--ic-space-xs);
 }
 
-.expanded-content-open {
-  display: flex;
-  flex-direction: column;
+/* .expanded-content-open {
+
+} */
+
+.expanded-content-opened {
+  overflow: visible;
+  /* height: auto; */
 }
